# grok-bridge-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  SKILL.md  agent.md
.github/workflows/: ci.yml  release.yml
agents/: openai.yaml
hooks/unix/: grok-bridge.json
hooks/windows/: grok-bridge.json
src/: gui_fonts.rs  hooks.rs  main.rs  protocol.rs  server.rs  session.rs  terminal_gui.rs  transport.rs
webui/: index.html  package-lock.json  package.json  vite.config.js
webui/src/: App.jsx  App.test.jsx  api.js  index.css  sessions.js  sessions.test.js  theme.js  theme.test.jsx
webui/src/i18n/catalog/: pt-BR.js  pt-PT.js
webui/src/test/: setup.js
